New base path for health checking
